<resources>
    <string name="app_name">Cheeky Monkey</string>
    <string name="version_string">v1.0</string>
    <string name="action_settings">Settings</string>
    <string name="server_client_id">555927586239-tkili90lm6jqk5plqpdvcb63f3nhv5e3.apps.googleusercontent.com</string>
    <string name="facebook_app_id">434553970233032</string>
    <string name="update_status">Update Status</string>
    <string name="post_image">Post Image</string>
    <string name="fb_login_protocol_scheme">fb434553970233032</string>
    <string name="alert_string">Alert</string>
    <string name="fb_string">Facebook</string>
    <string name="fb_cancel_string">Facebook Login was cancelled. Please try to login again.</string>
    <string name="ggl_cancel_string">Google Login was cancelled. Please try to login again.</string>
    <string name="expire_date">Expire Date</string>
    <string name="permission">Permission</string>
    <string name="expire_string">You have 30seconds to place order.</string>
    <string name="expire_title">Your order is about to expire</string>
    <string name="expire_msg">You have 15 seconds more to place order</string>
    <string name="remain_time">%1$s:00</string>
    <string name="time_out_string">Time out</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="sign_out_string">Sign out</string>
    <string name="signOutFromApp">Are you sure you want to sign out?</string>
    <string name="sign_in_string">Sign in</string>
    <string name="sign_up_string">Sign up</string>
    <string name="back_string">Back</string>
    <string name="accept_tnc_string">By clicking sign up, you agree to our Terms of Use and Privacy Policy</string>
    <string name="proceed">Proceed</string>
    <string name="skip">Skip</string>
    <string name="add_mixer">Add Mixer</string>
    <string name="sign_in_msg">You need to sign in to place an Order. Do you want to proceed ?</string>
    <string name="bar_msg">Drink safe. Drive Safe. Words from Cheeky Monkey</string>
    <string name="never_mind_string">Never Mind</string>
    <string name="remind_later_string">Remind me later</string>
    <string name="remember_string">Remember</string>
    <string name="create_act_string">Create An Account</string>
    <string name="exist_act_string">With Existing Account</string>
    <string name="msg_scl_media">We do not post to your social media without your permission</string>
    <string name="net_failure_string">No Internet connection &#8230;</string>
    <string name="retry_string">Retry</string>
    <string name="odr_quickly_string">Order Quick! Prices @ Cheeky Monkey change based on Demand and Supply</string>
    <string name="no_order">You have no active orders.</string>
    <string name="error_dialog_error1">Unable to complete process at this time. Please check you have a data connection
        and try again later.
    </string>
    <string name="error_dialog_error">Guest not found </string>
    <string name="error_net_failure">Error_Network_Failure</string>
    <string name="error_dialog_no_results">No results found. Try changing your criteria.</string>
    <string name="error_dialog_server_error">A problem occurred retrieving results. Please try again later.</string>
    <string name="error_dialog_error_unknown">An unknown error has occurred. Please try again.</string>
    <string name="error_dialog_search_error">Unable to complete search at this time. Please check you have a data
        connection and try again later
    </string>
    <string name="error_dialog_search_no_results">No results found. Try changing your search criteria.</string>
    <string name="error_dialog_search_server_error">A problem occurred retrieving results. Please try again later.
    </string>
    <string name="error_dialog_search_error_unknown">An unknown error has occurred. Please try searching again.</string>
    <string name="exitFromApp">Are you sure to exit?</string>
    <string name="yes_string">Yes</string>
    <string name="no_string">No</string>
    <string name="ok_string">Ok</string>
    <string name="Search_Guest_string">Search Guest </string>
    <string name="cancel_string">Cancel</string>
    <string name="create_guest">Create Guest</string>
    <string name="order_cancel">Order Cancel</string>
    <string name="save_string">Save</string>
    <string name="guest_string">Guest</string>
    <string name="table_string">Table</string>
    <string name="del_boy">Delivery Boy</string>
    <string name="order_table_string">Running Order</string>
    <string name="search">Search</string>
    <string name="qty_string">Quantity -</string>
    <string name="subUnit_string">Sub Quantity </string>
    <string name="subqty_string"> Enter Sub Qty. here </string>
    <string name="home_order_review">Order Review</string>
    <string name="modifier_popup_string">Select Modifier for</string>
    <string name="addon_popup_string">Select Addons for</string>
    <string name="select_room_string">Room </string>
    <string name="select_table_string">Table</string>
    <string name="selected_table_string">Table : %1$s</string>
    <string name="selected_odr_string">Order : %1$s</string>
    <string name="select_order_string">Order</string>
    <string name="login_string">Login</string>
    <string name="register_string">Register</string>
    <string name="submit_string">Submit</string>
    <string name="confirm_string">Confirm</string>
    <string name="continue_string">Continue</string>
    <string name="userID_hint_string">User ID</string>
    <string name="password_hint_string">Password</string>
    <string name="server_ip_hint_string">Server IP</string>
    <string name="clear_string">Clear</string>
    <string name="close_string">Close</string>
    <string name="select_room_string1">Room : %1$s</string>
    <string name="welcome_messages">Hello, %1$s! You have %2$d new messages.</string>
    <string name="item_string">Soda</string>
    <string name="add_item">Add item</string>
    <string name="show_bill">Show Bill</string>
    <string name="accept_string">Accept</string>
    <string name="accept_string1">Accept</string>
    <string name="reject_string">Reject</string>
    <string name="genrate_string">Generate Bill</string>
    <string name="genrate_bill">Gen. Bill</string>
    <string name="Save_string">Save</string>
    <string name="discount_string">Discount</string>
    <string name="total_string">Total</string>
    <string name="select_order_detil">Order Detail</string>
    <string name="select_order_split_string">Order Split</string>
    <string name="SelectOption_string">Selected Option</string>
    <string name="in_string">In</string>
    <string name="out_string">Out</string>
    <string name="home_del">Home Delivery</string>
    <string name="home_log">Home Delivery Log</string>
    <string name="pending_bills">Pending Bills</string>
    <string name="bill_stl">Bill Settlement</string>
    <string name="bill_stlmnt">Bill Settlement - Credit Card</string>
    <string name="bill_cancel">Bill Cancel</string>
    <string name="cancel_bill">Cancel Bill</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="bill_modi">Bill Modify</string>
    <string name="update_bill">Update Bill</string>
    <string name="bill_trnsfr">Bill Transfer</string>
    <string name="bill_amt">Bill Amount : </string>
    <string name="trnsfr">Transfer</string>
    <string name="undo_stl">Undo Settlement </string>
    <string name="direct_stl">Direct Settlement </string>
    <string name="please_update_ur_detail">Please Update Your Detail&#8230;</string>
    <string name="enter_your_phone_number">Enter your Phone Number....</string>
    <string name="mobile_string">Mobile</string>
    <string name="enter_your_email_id">Enter your Email-ID....</string>
    <string name="enter_your_name">Enter your Name..</string>
    <string name="email_string">Email</string>
    <string name="email_mob_string">Email/Mobile #</string>
    <string name="forgot_string">Forgot Password ?</string>
    <string name="dob_confirm_string">We would like to confirm your date of birth</string>
    <string name="dob_string">Date Of Birth</string>
    <string name="age_confirm">Are you above 21 years of age?</string>
    <string name="orders_string">Orders</string>
    <string name="hold_order">Hold Order</string>
    <string name="table_order"> Table Order</string>
    <string name="change_to_comp">Change To Compl.</string>
    <string name="create_emp">Create Employee</string>
    <string name="fst_name_string">FirstName</string>
    <string name="last_name_string">LastName</string>
    <string name="guest_new">Guest :</string>
    <string name="ordr_amt">Order Amt:</string>
    <string name="order_amt">Total Amt (without tax):</string>
    <string name="syncData">SyncData</string>
    <string name="dataSync_string">Data Synchronization</string>
    <string name="update_string">Update</string>
    <string name="Cancel_string">Cancel</string>
    <string name="active">Active</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="GPSAlertDialogTitle">Location Services Disabled</string>
    <string name="GPSAlertDialogMessage">You need to enable Location Services to place an order.</string>
    <string name="remote_service_started">Remote Service started</string>
    <string name="remote_service_stopped">Remote Service stopped</string>
    <string name="local_service_label">Service</string>
    <string name="local_service_started">Local Service started</string>
    <string name="local_service_stopped">Local Service stopped</string>
    <string name="local_service_connected">Connected</string>
    <string name="local_service_disconnected">Disconnected</string>
    <string name="not_in_range">Minimum 6 characters required.</string>
    <string name="value_is_not_valid_email_address">Value is not valid email address</string>
    <string name="field_could_not_be_empty">Field can not be empty</string>
    <string name="loading_string">Loading...</string>
    <string name="action_bar_search">Search</string>
    <string name="order_type2">Order Type</string>
    <string name="steward">Select Steward</string>
    <string name="order_remark_string">Order Remark</string>
    <string name="order_review_string">Order Review</string>
    <string name="item_remark_string">Item Remark</string>
    <string name="select_steward_menu">Steward</string>
    <string name="cover_menu_string">Cover</string>
    <string name="search_menu_item_string">Search</string>
    <string name="wlcm_gst_string">Welcome, Guest</string>
    <string name="lock_drawer">Lock Drawer</string>
    <string name="home_footer">Home</string>
    <string name="order_review">Order Review</string>
    <string name="order_header">My Orders</string>
    <string name="ttl_amt">Your Total Amount</string>
    <string name="amt">0</string>
    <string name="taxes">*Taxes applicable</string>
    <string name="rupees">%1$s %2$s</string>
    <string name="zero_rupee">\u20B9 0</string>
    <string name="slct_tbl_string">Select Table \t</string>
    <string name="On_Off">On/Off</string>
    <string name="status_string">Status</string>
    <string name="sts_string">Status : %1$s</string>
    <string name="odr_string">Order No. %1$s</string>
    <string name="tbl_string">Table No. %1$s</string>
    <string name="date_string">Date : %1$s</string>
    <string name="select_quantity">Select Quantity</string>
    <string name="odr_cnfrm_title">Congratulations !</string>
    <string name="odr_cnfrm_msg">Your order has been  placed successfully. \n
		Our waiting staff will reconfirm \n the order shortly.</string>
    <string name="thanks_string">Thank You </string>
    <string name="admin">Admin</string>
    <string name="adm_outletid">Outlet ID</string>
    <string name="name">Name</string>
</resources>