<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back4"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header3_height"
        android:background="@color/Yellow"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/image_back"
            style="@style/Widget.AppCompat.Toolbar.Button.Navigation"
            android:layout_width="20sp"
            android:layout_height="match_parent"
            android:contentDescription="@string/back_string"
            android:src="@drawable/arrow_left" />

        <ImageView
            android:layout_width="@dimen/header2_height"
            android:layout_height="@dimen/header2_height"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:src="@drawable/app_icon1" />

        <TextView
            android:id="@+id/tv_outlet_details"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/admin"
            android:textColor="@color/grey_dark"
            android:textSize="@dimen/extra_extra_large" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_adm_outletid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:hint="@string/adm_outletid"
            android:padding="10dp"
            android:textColor="@color/Black"
            android:textColorHint="@color/Grey"
             />

        <EditText
            android:id="@+id/edt_adm_outlet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:background="@drawable/edit_text_background"
            android:hint="@string/name"
            android:padding="10dp"
            android:textColor="@color/Black"
            android:textColorHint="@color/Grey" />

        <EditText
            android:id="@+id/edt_adm_outlet_uid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:background="@drawable/edit_text_background"
            android:hint="@string/userID_hint_string"
            android:padding="10dp"
            android:textColor="@color/Black"
            android:textColorHint="@color/Grey" />

        <EditText
            android:id="@+id/et_adm_outlet_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin"
            android:background="@drawable/edit_text_background"
            android:hint="@string/password_hint_string"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/Black"
            android:textColorHint="@color/Grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_adm_outlet_usertype"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/small1"
                android:layout_weight="1"
                android:background="@drawable/edit_text_background"
                android:drawableRight="@drawable/arrow_down"
                android:gravity="center"
                android:padding="10dp"
                android:text="User Type"
                android:textColor="@color/Sienna"
                android:textSize="@dimen/extra_large1" />

            <CheckBox
                android:id="@+id/ckb_adm_outlet_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:background="@drawable/edit_text_background"
                android:buttonTint="@color/Red"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/active"
                android:textColor="@color/grey_dark" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_adm_outlet_expireDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/edit_text_background"
            android:drawableRight="@drawable/date_black"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/expire_date"
            android:textColor="@color/Black" />


        <TextView
            android:id="@+id/tv_adm_outlet_permission"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_margin"
            android:background="@drawable/edit_text_background"
            android:drawableRight="@drawable/arrow_down"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/permission"
            android:textColor="@color/Sienna"
            android:textSize="@dimen/extra_large1" />

        <Button
            android:id="@+id/btn_adm_outlet_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_state"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:minHeight="@dimen/take_order_tab_height"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textSize="@dimen/extra_large" />

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button" />


</LinearLayout>