<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey_light"
                android:orientation="vertical">




    <LinearLayout
        android:id="@+id/tv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/Black"
        android:paddingRight="50sp"
        android:paddingEnd="50sp">

        <ImageButton
            style="@style/Widget.AppCompat.Toolbar.Button.Navigation"
            android:id="@+id/image_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/arrow_left"
            android:contentDescription="@string/back_string"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:gravity="center|bottom"
            android:padding="@dimen/header_padding"
            android:text="@string/order_review_string"
            android:textSize="@dimen/extra_large"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_light"/>

    <com.entrada.cheekyMonkey.ui.CustomTextview
        android:id="@+id/tv_no_order"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_order"
        android:textSize="@dimen/extra_large"
        android:gravity="center|top"
        android:padding="20dp"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/ll_list_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <FrameLayout
            android:id="@+id/frameLayout_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>


        <ListView
            android:id="@+id/listViewOrderItem"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/order_background"
            android:divider="@color/menu_item_color"
            android:dividerHeight="1dp"
            android:listSelector="@null"
            android:layout_weight="1"/>

        <ListView
            android:id="@+id/listview_search_Item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50sp"
            android:background="@color/Black"
            android:padding="7dp">

            <com.entrada.cheekyMonkey.ui.CustomTextview
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:textSize="@dimen/large"
                android:gravity="center_vertical"
                android:text="@string/ttl_amt"
                android:textColor="@color/White"
                />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center|top">

                <com.entrada.cheekyMonkey.ui.CustomTextview
                    android:id="@+id/ttl_amt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/large"
                    android:paddingStart="10sp"
                    android:paddingLeft="10sp"
                    android:gravity="end|bottom"
                    android:text="@string/zero_rupee"/>

                <com.entrada.cheekyMonkey.ui.CustomTextview
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/taxes"
                    android:gravity="end|bottom"
                    android:textSize="10sp"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@android:color/transparent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">


            <com.entrada.cheekyMonkey.ui.CustomTextview
                android:id="@+id/selectTable"
                fontName="Roboto-Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxHeight="40sp"
                android:layout_marginRight="5sp"
                android:layout_marginEnd="5sp"
                android:gravity="center"
                android:background="@drawable/button_state"
                android:text="@string/slct_tbl_string"
                android:textSize="@dimen/medium"
                android:drawableRight="@drawable/arrow_yellow"
                android:drawableEnd="@drawable/arrow_down"/>

            <com.entrada.cheekyMonkey.ui.CustomTextview
                android:id="@+id/txtOrderSubmit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/button_state"
                android:gravity="center"
                android:text="@string/confirm_string"
                android:textSize="@dimen/medium"/>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/odr_quickly_string"
            android:background="@color/dark_brown_color"
            android:textSize="10sp"
            android:gravity="left"
            android:padding="5dp"/>

    </LinearLayout>



</LinearLayout>
